--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <button class="decimal" value=".">.</button>
                 <button class="all-clear" value="all-clear">AC</button>
 
+                <button class="equal-sign operator" value="=">=</button>
+
             </div>
         </div>
 
