--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="container">
-            <input type="text" class="screen" disable>
+            <input type="text" class="screen" disabled>
             <div class="keys">
                 <button class="operator" value="+">+</button>
                 <button class="operator" value="-">-</button>
